src/test/deca/context/valid/variable/valid_conversion_float_int.deca
// Description:
//    Valid assignment with implicit conversion from int to float.
//
// [Begin Result]
// No errors.
// [End Result]
//
// History:
//    Created on 06/01/2025.

{
    float f = 10; // Implicit conversion from int to float
}
